--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+
         <h1>HELLO WORLD!!</h1>
 
         <script>
@@ -35,10 +36,46 @@
 
             console.log("Your BMI Index is " + BMIIndex());
 
+            /* function notRepeatedNumber(list){
+                var not_repeated = {};
+                for(var i = 0; i < list.length; i++){
+                    var number = list[i];
+                    if (!not_repeated[number.key]){
+                        not_repeated[number.key] = [1];
+                    }else{
+                        not_repeated[number.key]+=1;
+                    }
+                }
+                for (var j = 0; j < Object.keys(not_repeated).length; j++){
+                    var k = not_repeated[j];
+                    if(k == 1){
+                        return not_repeated[j];
+                    }
+                }
+            } */
 
+            var duplicate_array = [1, 2, 4, 5, 9, 1, 2, 4, 5];
+            // console.log(notRepeatedNumber(duplicate_array));
+
+            function nonRepeating(array){
+                for(var i = 0; i < array.length; i++){
+                    for(var j = i; j < array.length; j++){
+                        if (i != j && array[i] == array[j]){
+                            break;
+                        }
+                        if(j == array.length -1){
+                            return array[i];
+                        }
+                    }
+                }
+            }
+
+            console.log(nonRepeating(duplicate_array));
+            
 
 
         </script>
+
     </body>
 
 
