Cleaning the code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 
     <head>
+
         <title>JVScript HW1</title>
+    
     </head>
 
     <body>
@@ -9,6 +11,7 @@
         <h1>HELLO WORLD!!</h1>
 
         <script>
+
             function isALeapYear(year){
                 if(year==0){
                     return false;
@@ -36,7 +39,7 @@
 
             console.log("Your BMI Index is " + BMIIndex());
 
-            /* function notRepeatedNumber(list){
+            /* function notRepeating(list){
                 var not_repeated = {};
                 for(var i = 0; i < list.length; i++){
                     var number = list[i];
@@ -55,7 +58,6 @@
             } */
 
             var duplicate_array = [1, 2, 4, 5, 9, 1, 2, 4, 5];
-            // console.log(notRepeatedNumber(duplicate_array));
 
             function noneRepeating(array){
                 for(var i = 0; i < array.length; i++){
@@ -96,11 +98,8 @@
             var array = [9, 8, 7, 6, 5, 4, 3, 2, 1];
             console.log(secondMaximum(array));
 
-
-
         </script>
 
     </body>
-
 
 </html>
